# no-tang-doc

./: CONTRIBUTING.md  README.md
.github/: CODEOWNERS
.github/workflows/: deploy-to-doks.yaml  load-test-manual.yaml  load-test-reusable.yaml  load-test-scheduled.yaml  no-tang-doc-agent-cd.yaml  no-tang-doc-agent-ci.yaml  no-tang-doc-core-ci.yaml  push-to-docr.yaml  web-deploy.yaml
IaC/: README.md
IaC/addons/cert-manager/: README.md  backend.tf  main.tf  variables.tf
IaC/addons/external-dns/: backend.tf  main.tf  providers.tf  variables.tf
IaC/addons/ingress-nginx/: backend.tf  main.tf  providers.tf  variables.tf
IaC/cluster/: README.md  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
IaC/cluster-bootstrap/: backend.tf  main.tf  providers.tf  variables.tf
IaC/database/: README.md  backend.tf  data.tf  main.tf  outputs.tf
IaC/docr/: README.md  backend.tf  main.tf  outputs.tf
IaC/keycloak/: backend.tf  data.tf  main.tf  outputs.tf  providers.tf  variables.tf
IaC/space/: README.md  backend.tf  main.tf  outputs.tf  providers.tf
charts/ntdoc-agent/: Chart.yaml  values.yaml
charts/ntdoc-agent/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
charts/ntdoc-core/: Chart.yaml  values.yaml
charts/ntdoc-core/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
load-tests/: .gitignore  KEYCLOAK_SETUP.md  README.md
load-tests/k6/config/: environments.json  scenarios.json  thresholds.json
load-tests/k6/scripts/: agent-api.js  core-api.js  web-frontend.js
load-tests/k6/utils/: auth.js
no-tang-doc-agent/: .coveragerc  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  fastagent.config.yaml  logging.yaml  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini
no-tang-doc-agent/mcp_server/: __init__.py  mcp_server.py
no-tang-doc-agent/src/no_tang_doc_agent/: datetime_excepthook.py
no-tang-doc-agent/src/no_tang_doc_agent/mcp_server/: __init__.py  __main__.py  mcp_server.py
no-tang-doc-agent/tests/: test_mcp_server.py
no-tang-doc-core/: Dockerfile  README.md  docker-compose.yml  no-tang-doc-core.json  pom.xml
no-tang-doc-core/config/pmd/: pmd-ruleset.xml
no-tang-doc-core/docker/mysql/: init.sql
no-tang-doc-web/: .dockerignore  .env  Dockerfile  README.md  TESTING.md  docker-compose.yml  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
no-tang-doc-web/.github/workflows/: deploy.yaml
no-tang-doc-web/public/: silent-check-sso.html
no-tang-doc-web/src/: App.tsx  index.css  main.tsx
no-tang-doc-web/src/pages/: HomePage.tsx  (+14 more)
(+244 files in other folders)
