[project]
name = "no-tang-doc-agent"
version = "0.1.0"
description = "no-tang-doc-agent"
readme = "README.md"
authors = [{ name = "Rocky Haotian Du", email = "2712479005@qq.com" }]
requires-python = ">=3.13.5,<3.14"
dependencies = [
    "fast-agent-mcp>=0.3.18",
    "mcp[cli]>=1.19.0",
    "pyjwt>=2.10.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
no-tang-doc-agent-mcp-server = "no_tang_doc_agent.mcp_server.__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "ipython>=9.6.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.2",
]

[tool.ruff]
# Use Black-compatible line length (default: 88)
line-length = 88

# Target Python 3.13
target-version = "py313"

# Enable auto-fixing where possible
fix = true

[tool.ruff.lint]
# Select rules: Error, Warning, Flake8, isort, Naming, pyupgrade
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules if needed
ignore = [
    "E501",  # Line too long (handled by formatter)
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F841",  # Allow unused variables in tests
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Like Black, automatically detect line endings
line-ending = "auto"
